changes to index page: - html: changes 2 image placeholders to 2 videos - css: + reduce width of video to 250px (from 500) + increase size of 1st column to 45% (from35%) + change #presentvideo to .presentvideo + add margin bottom and width for .presentvideo div

--- a/index.html
+++ b/index.html
@@ -28,26 +28,29 @@
         <div id="aboutus">
             <h1>About us</h1>
             <hr id ="decoline">
-            <div id = "presentvideo">
-            	<video controls> 
-                	<source src="videos/presentation.mp4" type="video/mp4"> 
-                	<source src="videos/presentation.ogg" type="video/ogg"> 
-                	Your browser does not support the video tag. 
-                </video> 
-            </div>
+            
             <div class = column1home>
-                <div class = "homepic">
-                	<img src = "images/imageplaceholder.png" alt = "thumbnail image"/>
-                    <h3>Image 1</h3>
+                <div class = "presentvideo">
+                    <video controls> 
+                        <source src="videos/presentation.mp4" type="video/mp4"> 
+                        <source src="videos/presentation.ogg" type="video/ogg"> 
+                        Your browser does not support the video tag. 
+                    </video> 
+                    Presentation
                 </div>
-                <div class = "homepic">
-                	<img src = "images/imageplaceholder.png" alt = "thumbnail image"/>
-                    <h3>Image 2</h3>
+                <div class = "presentvideo">
+                    <!-- TODO: Change to new video -->
+                    <video controls> 
+                        <source src="videos/presentation.mp4" type="video/mp4"> 
+                        <source src="videos/presentation.ogg" type="video/ogg"> 
+                        Your browser does not support the video tag. 
+                    </video> 
+                    Test video
                 </div>
             </div>
             
             <div class = column2home>
-                <p>We are the first student initiated club that focuses in Information Technology and runs within the premises of Fairleigh Dickinson University, Vancouver Campus. After a group of friends realized that students needed help learning codes and guidance through lectures and assignments, they planned for making a club that does all tasks on campus related to information technology. With a total of 9 board members and two advisors, the club was officially founded in 14th September 2018. We also have plans to organize an annual treasure hunt every spring semester where student(s) can sign up and participate. All the participants will be awarded certificate of participation and the winners will be prized. We also conduct various programs such as study sessions and seminars from professional IT engineers so as to help students catch up in both the university and the actual world. We have a mission to help students in their academic journey by providing every support possible.</p>
+                We are the first student initiated club that focuses in Information Technology and runs within the premises of Fairleigh Dickinson University, Vancouver Campus. After a group of friends realized that students needed help learning codes and guidance through lectures and assignments, they planned for making a club that does all tasks on campus related to information technology. With a total of 9 board members and two advisors, the club was officially founded in 14th September 2018. We also have plans to organize an annual treasure hunt every spring semester where student(s) can sign up and participate. All the participants will be awarded certificate of participation and the winners will be prized. We also conduct various programs such as study sessions and seminars from professional IT engineers so as to help students catch up in both the university and the actual world. We have a mission to help students in their academic journey by providing every support possible.
             </div>
         </div>
     </main>
