[Issue #06] Changes: - Add articles.html and stylearticles.css - Add Articles button to the nav bar of all pages - Minor bug fix: add the link to the Contact and Join button in nav bar

--- a/harry.html
+++ b/harry.html
@@ -11,10 +11,11 @@
 	<nav>
         <a class = "logo" href = "index.html"><img src="images/logoplaceholder.png" alt = "logo"/></a>
         <a href = "index.html#aboutus">About us</a>
+        <a href = "articles.html">Articles</a>
         <a id = "selected" href = "members.html">Members</a>
         <a href = "activities.html">Activities</a>
-        <a href = "">Contact us</a>
-        <a href = "">Join us</a>
+        <a href = "contact.html">Contact us</a>
+        <a href = "join.html">Join us</a>
     </nav>
     
     
