--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<nav>
 		<a class = "logo" href = "index.html"><img src="images/logoplaceholder.png" alt = "logo"/></a>
         <a id = "selected" href = "index.html#aboutus">About us</a>
+        <a href = "articles.html">Articles</a>
         <a href = "members.html">Members</a>
         <a href = "activities.html">Activities</a>
         <a href = "contact.html">Contact us</a>
