--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
         <nav>
             <a class = "logo" href = "index.html"><img src="images/logoplaceholder.png" alt = "logo"/></a>
             <a href = "index.html#aboutus">About us</a>
+            <a href = "articles.html">Articles</a>
             <a href = "members.html">Members</a>
             <a href = "activities.html">Activities</a>
             <a id = "selected" href = "contact.html">Contact us</a>
