--- a/members.html
+++ b/members.html
@@ -11,6 +11,7 @@
 	<nav>
         <a class = "logo" href = "index.html"><img src="images/logoplaceholder.png" alt = "logo"/></a>
         <a href = "index.html#aboutus">About us</a>
+        <a href = "articles.html">Articles</a>
         <a id = "selected" href = "members.html">Members</a>
         <a href = "activities.html">Activities</a>
         <a href = "contact.html">Contact us</a>
