--- a/articles.html
+++ b/articles.html
@@ -5,6 +5,9 @@
         <title>Contact Us</title>
         <link rel="stylesheet" href="css/style1.css" />
         <link rel="stylesheet" type="text/css" href="css/stylearticles.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
     </head>
 
     <body>
@@ -25,8 +28,33 @@
             </div>
         </main>
         <footer>
-                <hr id="line">
-                To be updated
-        </footer>
+                <div class="footer-wrapper">
+                    <aside>
+                        <div class="the-address-wrapper">
+                            <h3><strong>ADDRESS</strong></h3>
+                            <div>
+                                <strong>FDU Vancouver's Code4Fun</strong>
+                                <br>
+                                Fairleigh Dickinson University Vancouver Campus
+                                <br>842 Cambie Street, Vancouver, B.C, V6B2P6
+                            </div>
+                        </div>
+                    </aside>
+                    <aside>
+                        <h3><strong>FOLLOW US</strong></h3>
+                        <div class="social-media">
+                            <a href="#" target="_blank" style="font-size: 20px; padding: 3px; color: black"><i class="fab fa-twitter"></i></a>
+                            <a href="#" target="_blank" style="font-size: 20px; padding: 3px; color: black;"><i class="fab fa-instagram"></i></a>
+                            <a href="#" target="_blank" style="font-size: 20px; padding: 3px; color: black;"><i class="fas fa-envelope"></i></a>
+                        </div>
+                        <div class="trademark" style="font-size: 15px;">© 2018 Code4Fun Club at FDU Vancouver</div>
+                    </aside>
+                    <aside>
+                        <h3><strong>CONTACT US</strong></h3>
+                        <div>Anh Pham: (778)-751-7243</div>
+                        <div>Prashan Malla: (604)-250-9162</div>
+                    </aside>
+                </div>
+            </footer>
     </body>
 </html>
