--- a/members.html
+++ b/members.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style1.css"/>
     <link rel="stylesheet" type="text/css" href="css/stylemembers.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
     <title>Our Members</title>
 </head>
 
@@ -64,11 +67,6 @@
                     <h4 class="title">Content Maker</h4>
                 </div>
                 <div class="cell">
-                    <div class="imgbox"><a href="rica.html"><img class="imgcell" src="images/rica.png" alt="Rica Rabang"/></a></div>
-                    <h3 class="name">Rica Rabang</h3>
-                    <h4 class="title">Content Maker</h4>
-                </div>
-                <div class="cell">
                     <div class="imgbox"><a href="jennifer.html"><img class="imgcell" src="images/jennifer.png" alt="Jennifer Lazo"/></a></div>
                     <h3 class="name">Jennifer Lazo</h3>
                     <h4 class="title">Content Maker</h4>
@@ -78,8 +76,33 @@
         </div>
     </main>
     <footer>
-        <hr id="line">
-        To be updated
-    </footer>
+            <div class="footer-wrapper">
+                <aside>
+                    <div class="the-address-wrapper">
+                        <h3><strong>ADDRESS</strong></h3>
+                        <div>
+                            <strong>FDU Vancouver's Code4Fun</strong>
+                            <br>
+                            Fairleigh Dickinson University Vancouver Campus
+                            <br>842 Cambie Street, Vancouver, B.C, V6B2P6
+                        </div>
+                    </div>
+                </aside>
+                <aside>
+                    <h3><strong>FOLLOW US</strong></h3>
+                    <div class="social-media">
+                        <a href="#" target="_blank" style="font-size: 20px; padding: 3px; color: black"><i class="fab fa-twitter"></i></a>
+                        <a href="#" target="_blank" style="font-size: 20px; padding: 3px; color: black;"><i class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank" style="font-size: 20px; padding: 3px; color: black;"><i class="fas fa-envelope"></i></a>
+                    </div>
+                    <div class="trademark" style="font-size: 15px;">© 2018 Code4Fun Club at FDU Vancouver</div>
+                </aside>
+                <aside>
+                    <h3><strong>CONTACT US</strong></h3>
+                    <div>Anh Pham: (778)-751-7243</div>
+                    <div>Prashan Malla: (604)-250-9162</div>
+                </aside>
+            </div>
+        </footer>
 </body>
 </html>
