[#18] Changes: - change decoline from id to class

--- a/activities.html
+++ b/activities.html
@@ -31,7 +31,7 @@
             <!--<marquee>Notice!!! Forms for 2019 Treasure hunt avaiable at the student lounge. Sign up now!!!</marquee>-->
         	<div id="activity">
                 <h1>Our Activities</h1>
-				<hr id="decoline">
+				<hr class="decoline">
                     <p>One of the major goals of a college club is to make learning fun and less stressful. We as a club organize various programs to achieve this goal.
                     We organize many programs where all students are welcome to participate. Our main event is the treasure hunt we organize once every year in the spring semester.
                     Other than treasure hunt we also organize study sessions, field visits, seminars and conferences. Some of our activities are mentioned below;</p>
