--- a/articles.html
+++ b/articles.html
@@ -23,7 +23,7 @@
         <main>
             <div id="whole">
                 <h1>Articles</h1>
-                <hr id="decoline">
+                <hr class="decoline">
                 <h3>To be updated :)</h3>
             </div>
         </main>
