--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <main>
             <div id="whole">
                 <h1>Contact Us</h1>
-                <hr id="decoline">
+                <hr class="decoline">
                 <div id="contacts">
                     <p class="clubname"> CodeforFun</p>
                     <p>Fairleigh Dickinson University</p>
