--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
         <div id="aboutus">
             <h1>About us</h1>
-            <hr id="decoline">
+            <hr class="decoline">
             
             <div class = column1home>
                 <div class="presentvideo">
