--- a/members.html
+++ b/members.html
@@ -24,7 +24,7 @@
     <main>
         <div id="main">
         <h1>Our Team</h1>
-        <hr id="decoline">
+        <hr class="decoline">
         <div id="memberlist">
             <div class="line">
                 <div class="cell">
