--- a/join.html
+++ b/join.html
@@ -23,7 +23,7 @@
         	
             <div id="join">
                 <h1>Join Us</h1>
-                <hr id="decoline">
+                <hr class="decoline">
                 <form action=" thankyou.html">
                     <div class="cat">
                         <label for="firstname">First Name:</label>
