--- a/jennifer.html
+++ b/jennifer.html
@@ -35,7 +35,7 @@
                 </div>
             </section>
             
-            <div id="buttons"> <a href="rica.html">Previous</a> <a href="members.html">Members</a> <a href="prashan.html">Next</a></div>
+            <div id="buttons"> <a href="loc.html">Previous</a> <a href="members.html">Members</a> <a href="dat.html">Next</a></div>
         </div>
 	</main>
     <footer>
