--- a/members.html
+++ b/members.html
@@ -71,6 +71,11 @@
                     <h3 class="name">Jennifer Lazo</h3>
                     <h4 class="title">Content Maker</h4>
                 </div>
+                <div class="cell">
+                    <div class="imgbox"><a href="dat.html"><img class="imgcell" src="images/dat.jpeg" alt="Dat Quach"/></a></div>
+                    <h3 class="name">Dat Quach</h3>
+                    <h4 class="title">Content Maker</h4>
+                </div>
             </div>
         </div>
         </div>
