[#18] Changes: - change selected from id to class

--- a/activities.html
+++ b/activities.html
@@ -15,7 +15,7 @@
             <a href="index.html#aboutus">About us</a>
             <a href="articles.html">Articles</a>
             <a href="members.html">Members</a>
-            <a id="selected" href="activities.html">Activities</a>
+            <a class="selected" href="activities.html">Activities</a>
             <a href="contact.html">Contact us</a>
             <a href="join.html">Join us</a>
 		</nav>
