--- a/join.html
+++ b/join.html
@@ -17,7 +17,7 @@
             <a href="members.html">Members</a>
             <a href="activities.html">Activities</a>
             <a href="contact.html">Contact us</a>
-            <a id="selected" href="join.html">Join us</a>
+            <a class="selected" href="join.html">Join us</a>
 		</nav>
         <main>
         	
