--- a/articles.html
+++ b/articles.html
@@ -14,7 +14,7 @@
         <nav>
             <a class="logo" href="index.html"><img src="images/logoplaceholder.png" alt="logo"/></a>
             <a href="index.html#aboutus">About us</a>
-            <a id="selected" href="articles.html">Articles</a>
+            <a class="selected" href="articles.html">Articles</a>
             <a href="members.html">Members</a>
             <a href="activities.html">Activities</a>
             <a href="contact.html">Contact us</a>
