--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <a href="articles.html">Articles</a>
             <a href="members.html">Members</a>
             <a href="activities.html">Activities</a>
-            <a id="selected" href="contact.html">Contact us</a>
+            <a class="selected" href="contact.html">Contact us</a>
             <a href="join.html">Join us</a>
 		</nav>
         <main>
