--- a/prashan.html
+++ b/prashan.html
@@ -15,7 +15,7 @@
         <a class="logo" href="index.html"><img src="images/logoplaceholder.png" alt="logo"/></a>
         <a href="index.html#aboutus">About us</a>
         <a href="articles.html">Articles</a>
-        <a id="selected" href="members.html">Members</a>
+        <a class="selected" href="members.html">Members</a>
         <a href="activities.html">Activities</a>
         <a href="contact.html">Contact us</a>
         <a href="join.html">Join us</a>
