[#18] Changes: - change subnav (in activity page) from id to class

--- a/activities.html
+++ b/activities.html
@@ -20,7 +20,7 @@
             <a href="join.html">Join us</a>
 		</nav>
         
-        <div id="subnav">
+        <div class="subnav">
         	<a href="#activity">Treasure Hunt</a>
             <a href="#studysession">Study Session</a>
             <a href="#fieldtrip">Field Trip</a>
