[#18] Changes: - Change div id to class in activities.html. activities.html is now updated - Change div ids to classes in index.html. index.html is now updated. - remove unnecessary css lines in style1.css

--- a/activities.html
+++ b/activities.html
@@ -29,7 +29,7 @@
         
         <main>
             <!--<marquee>Notice!!! Forms for 2019 Treasure hunt avaiable at the student lounge. Sign up now!!!</marquee>-->
-        	<div id="activity">
+        	<div class="activities-box">
                 <h1>Our Activities</h1>
 				<hr class="decoline">
                     <p>One of the major goals of a college club is to make learning fun and less stressful. We as a club organize various programs to achieve this goal.
