--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <a href="join.html">Join us</a>
 	</nav>
     <main>
-        <section id="topsection">
-            <div id="welcome">
+        <section class="top-section">
+            <div class="top-section__overlay-text">
                 <h1>Welcome to</h1>
                 <h2>Code 4 Fun</h2>
-                <div id="arrow"><a href="#aboutus"><img src="images/arrow.png" alt="arrow down"/></a></div>
+                <div class="top-section__overlay-text__arrow"><a href="#aboutus"><img src="images/arrow.png" alt="arrow down"/></a></div>
             </div>
-            <div class="background"></div>
+            <div class="top-section__background"></div>
         </section>
-        <div id="aboutus">
+        <div class="about-us">
             <h1>About us</h1>
             <hr class="decoline">
             
