--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <title>Contact Us</title>
         <link rel="stylesheet" href="css/style1.css" />
         <link rel="stylesheet" type="text/css" href="css/stylecontact.css"/>
+        <link rel="shortcut icon" href="images/favicon.ico">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
