--- a/prashan.html
+++ b/prashan.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style1.css"/>
     <link rel="stylesheet" type="text/css" href="css/stylename.css"/>
+    <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
@@ -35,7 +36,7 @@
                 </div>
             </section>
             
-            <div class="member-box__buttons"> <a href="jennifer.html">Previous</a> <a href="members.html">Members</a> <a href="amir.html">Next</a></div>
+            <div class="member-box__buttons"> <a href="dat.html">Previous</a> <a href="members.html">Members</a> <a href="amir.html">Next</a></div>
         </div>
 	</main>
     <footer>
