[#18] fix bugs: - keep id for aboutus div since it is necessary for moving to this div.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="top-section__background"></div>
         </section>
-        <div class="about-us">
+        <div class="about-us" id="aboutus">
             <h1>About us</h1>
             <hr class="decoline">
             
