[NIL] changes the content of thankyou.html

--- a/thankyou.html
+++ b/thankyou.html
@@ -19,7 +19,7 @@
 	</nav>
 	<main>
     	<div id="response">
-            <p>Thank you for registering. Your answer has been recorded.</p>
+            <p>Since the website is still a Work-In-Progress project, we were not able to store your information. Please contact us via email or phone numbers instead. We are sorry for the inconvenience.</p>
             <p><a href="index.html">Back to home</a></p>
         </div>
     </main>
