--- a/thankyou.html
+++ b/thankyou.html
@@ -5,6 +5,7 @@
     <title>Thank you for registering</title>
     <link rel="stylesheet" href="css/style1.css">
     <link rel="stylesheet" href="css/stylethankyou.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
 <style></style></head>
 
 <body style="" cz-shortcut-listen="true">
