[NIL] Delete a auto-generated comment in thankyou.html

--- a/thankyou.html
+++ b/thankyou.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0137)http://burmajourney.com/info2105/HuyAnhNguyen/java/thankyou.html?firstname=&lastname=&phone=&email=&major=&describe=&reason=&gender=other -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Thank you for registering</title>
@@ -8,7 +7,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 <style></style></head>
 
-<body style="" cz-shortcut-listen="true">
+<body>
     <nav>
         <a class="logo" href="index.html"><img src="images/logoplaceholder.png" alt="logo"/></a>
             <a href="index.html#aboutus">About us</a>
